# SocGenTA202312

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: processed_training_full.parquet
energy_predictor/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
energy_predictor/.github/: ISSUE_TEMPLATE.md
energy_predictor/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
energy_predictor/src/energy_predictor/: __init__.py  cli.py  data_wrangling.py  model.py
energy_predictor/tests/: __init__.py
model/: logreg_clf.pickle  logreg_clf_2.pickle
notebook/: data_wrangling.ipynb  electricity.ipynb  model_training.ipynb
src/: data_wrangling.py
tests/: conftest.py  test_data_wrangling.py  test_model_wrapper.py
