[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_predictor"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Audrey Roy Greenfeld", email = "data@example.com"}
]
maintainers = [
  {name = "Audrey Roy Greenfeld", email = "data@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "onnxruntime",
  "pandas"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.scripts]
energy-predict = "energy_predictor.cli:predict"

[project.urls]

bugs = "https://github.com/audreyr/energy_predictor/issues"
changelog = "https://github.com/audreyr/energy_predictor/blob/master/changelog.md"
homepage = "https://github.com/audreyr/energy_predictor"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
line-length = 120
exclude = ["notebook/*"]
